--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
          <a class="logo" href="#">Inspiration</a>
          <nav class="header-nav">
            <a class="header-link" href="./people.html">PEOPLE</a>
-           <a class="header-link" href="#">EVENTS</a>
-           <a class="header-link" href="#">PARTNERS</a>
-           <a class="header-link" href="#">ABOUT US</a>
+           <a class="header-link" href="./events.html">EVENTS</a>
+           <!--<a class="header-link" href="#">PARTNERS</a>-->
+           <a class="header-link" href="/aboutUs.html">ABOUT US</a>
          </nav>     
     </header>  
 
