--- a/people.html
+++ b/people.html
@@ -12,9 +12,9 @@
          <a class="logo" href="./index.html">Inspiration</a>
          <nav class="header-nav">
            <a class="header-link active" href="./people.html">PEOPLE</a>
-           <a class="header-link" href="#">EVENTS</a>
-           <a class="header-link" href="#">PARTNERS</a>
-           <a class="header-link" href="#">ABOUT US</a>
+           <a class="header-link" href="./events.html">EVENTS</a>
+          <!-- <a class="header-link" href="#">PARTNERS</a>-->
+           <a class="header-link" href="./aboutUs.html">ABOUT US</a>
          </nav>     
     </header>  
     <h1 class="section-name"> PEOPLE </h1>
