add subscribe block, add sosial icons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>Inspiration</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
+ <link href="./css/fa.min.css" rel="stylesheet">
 
   </head>
   <body>
@@ -20,7 +21,43 @@
     </header>  
 
     <section class="section-img">
+
+      
     </section>
+    <section class="main-section">
+           
+      <div class="feedback">
+        <p class="text-read-article">READ NEW ARTICLES FIRST</p>
+        <form class="subscribe-form">
+           <input class="input-box" type="text" name="name" placeholder="Name">
+           <input class="input-box" type="text" name="email" placeholder="Email">
+           <button class="button-subscribe">Subscribe</button>
+        </form>                
+      </div>
+
+      <div class="we-in-social-networks">
+        <p class="we-in-networks-text"> We in social networks</p>
+        <div class="social-icon-container">
+          <a href="https://www.facebook.com/profile.php?id=100009199172800">
+            <i class="fab fa-facebook-f social-icon"> </i>
+          </a>
+          <a href="https://www.instagram.com/v.andriyivna/">
+            <i class="fab fa-instagram social-icon"></i>
+          </a>         
+          <a href="https://t.me/Andriyivna">
+            <i class="fab fa-telegram social-icon"></i>
+          </a>
+         <a href="https://twitter.com/mosbydev">
+            <i class="fab fa-twitter social-icon"></i>
+          </a>
+          <a href="https://www.youtube.com/channel/UCZR-0HyqJ0iyQDEJfabaOig">
+            <i class="fab fa-youtube social-icon"></i>
+          </a>         
+        </div>   
+      </div>
+    </section>
+
+
 
   </body>
 </html>
