add content on events page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -13,7 +13,7 @@
          <nav class="header-nav">
            <a class="header-link " href="./people.html">PEOPLE</a> <!--active-->
            <a class="header-link " href="./events.html">EVENTS</a> <!--active-->
-           <a class="header-link" href="./aboutUs.html">ABOUT US</a>
+           <a class="header-link active" href="./aboutUs.html">ABOUT US</a>
          </nav>     
      </header>  
     <h1 class="section-name"> ABOUT US </h1>
