Add content to page about us

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
           </a>         
         </div>   
       </div>
+
+
+
+
+      <div class="inspiration-is">
+        <p class="leaders"> <i>the</i><b>LEADERS</b></p>
+        
+
+      </div>
     </section>
 
 
