Add new page about Gres

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 
       <div class="inspiration-is">
         <p class="leaders"> <i>the</i><b>LEADERS</b></p>
+        <p class="leadership-journal"><b>INSPIRATION - ONLINE LEADERSHIP JOURNAL</b></p>
+        <P class="year" >INSPIRATION 2020</P>
+        <img  class="line-img " src="./img/background-home-img.png">
         
 
       </div>
