Add new page about Jobs

--- a/people.html
+++ b/people.html
@@ -23,7 +23,7 @@
            <img src="./img/jobs.jpg" width="280" height="230">
         </div>
         <div>
-          <a class="people-name" href="">Steve Jobs</a>
+          <a class="people-name" href="./jobs.html">Steve Jobs</a>
            
            <p class="people-status">Entrepreneur</p>
         </div>               
