add script.js file

--- a/jobs.html
+++ b/jobs.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Inspiration</title>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
 
@@ -14,7 +15,7 @@
    
 
     <section class="stay-hungry" >
-<!--          <p class="jobs-name-title"> Steve Jobs</p> --> 
+       <p id="main-text" class="jobs-name-title">Steve Jobs</p>  
     </section>
 
     
@@ -23,7 +24,7 @@
     </section>
 
 
-   <section class="main-section-about-steve">
+   <section class="main-section-about-steve"  >
    
     <h2 class="all-title"> <b>Who Was Steve Jobs?</b></h2>
 
@@ -43,8 +44,61 @@
 
     <p class="about-steve">The lesson he learned from this painful experience was to trust his own beliefs and values, and completely disregard the conventional views on how to run a company, including the traditional duties of a CEO. He delegated those duties to members of his executive team, most notably his second-in-command and eventual successor, Tim Cook, and focused on what he was best at: creating products, recruiting, marketing, and of course, being the public face of the company. He described it in a 2004 interview: "I get to spend my time on the forward-looking stuff. My top executives take half the other work off my plate. They love it, and I love it."</p>
 
+  </section>
 
+  <section class="section-think-different">
+    <div class="table-position">
 
+    <table border="1" class="table-styles">
+   <caption class="all-title"> Movies and books about Steve Jobs:</caption>
+   <tr>
+    <th>Films</th>
+    <th>Original release</th>
+    <th> Genre </th>
+    <th>Directed by </th>
+   </tr>
+   <tr>
+    <td>Pirates of Silicon Valley</td>
+    <td>June 20, 1999</td>
+    <td>Drama</td>
+    <td>Martyn Burke</td>
+   </tr>
+
+   <tr>
+    <td>JOBS</td>
+    <td>January 25, 2013 </td>
+    <td>Biographical drama</td>
+    <td>Joshua Michael Stern</td>
+   </tr>
+
+   <tr>
+    <td>Steve Jobs: The Lost Interview</td>
+    <td>May 11, 2012</td>
+    <td>Documental</td>
+    <td> Paul Sen</td>
+   </tr>
+   </table>
+
+ 
+<table border="1" class="table-styles">
+   <tr>
+    <th>Books</th>
+    <th> Author </th>
+    <th> Publication date </th>
+    <th> Genre </th>
+   </tr>
+
+    <tr>
+    <td>Steve Jobs (iSteve: The Book of Jobs)</td>
+    <td>Walter Isaacson</td>
+    <td>October 24, 2011 </td>
+    <td>Biography</td>
+   </tr>
+
+</div>
+   
+ 
+  </table>
 
 
   </section>
