--- a/people.html
+++ b/people.html
@@ -46,11 +46,11 @@
        
        <article class="article-preview" >
 
-      <div>
+      <div >
          <img   src="./img/sheryl.jpg"  width="280" height="230" alt="альтернативный текст">       
       </div>
       <div>
-        <a class="people-name" href="">Sheryl Sandberg</a>
+        <a class="people-name" href="" title=" see you soon" >Sheryl Sandberg</a>
          
          <p class="people-status">Technology executive </p>
 
@@ -65,5 +65,6 @@
     </section>
 
 
+    <script src="script.js"></script>
   </body>
 </html>
