--- a/gres.html
+++ b/gres.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Inspiration</title>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
 
