--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Inspiration</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="script.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
  <link href="./css/fa.min.css" rel="stylesheet">
 
