Add js scroll, add animation for text , add page about sheryl

--- a/gres.html
+++ b/gres.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Inspiration</title>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
 
   </head>
   <body class="body-paper">
+     <button onclick="topFunction()" class="top-button"> Top </button>
     <header class="header">     
          <a class="logo" href="./index.html">Inspiration</a>   
     </header>  
@@ -52,6 +52,6 @@
         
       </div>      
     </section>
-
+  <script src="scroll-to-top-script.js"></script>
   </body>
 </html>
