--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   </head>
   <body>
+    <button onclick="topFunction()" class="top-button"> Top </button>
+    
     <header class="header">     
          <a class="logo" href="#">Inspiration</a>
          <nav class="header-nav">
@@ -70,7 +72,7 @@
       </div>
     </section>
 
-
+ <script src="scroll-to-top-script.js"></script>
 
   </body>
 </html>
