--- a/jobs.html
+++ b/jobs.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Inspiration</title>
-    <script src="script.js"></script>
+    
     <link rel="stylesheet" href="./css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
 
   </head>
   <body class="background-dark">
+    <button onclick="topFunction()" class="top-button"> Top </button>
     <header class="header">     
          <a class="logo" href="./index.html">Inspiration</a>   
     </header>  
    
 
-    <section class="stay-hungry" >
+    <section class="jobs-header" >
        <p id="main-text" class="jobs-name-title">Steve Jobs</p>  
     </section>
 
@@ -34,6 +35,7 @@
    </section>
 
    <section class="think-different" >
+    <
 
   </section>
 
@@ -50,7 +52,7 @@
     <div class="table-position">
 
     <table border="1" class="table-styles">
-   <caption class="all-title"> Movies and books about Steve Jobs:</caption>
+   <caption class="all-title"> Movies about Steve Jobs:</caption>
    <tr>
     <th>Films</th>
     <th>Original release</th>
@@ -81,6 +83,7 @@
 
  
 <table border="1" class="table-styles">
+  <caption class="all-title"> Books about Steve Jobs:</caption>
    <tr>
     <th>Books</th>
     <th> Author </th>
@@ -102,6 +105,7 @@
 
 
   </section>
-
+  <script src="scroll-to-top-script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
