--- a/people.html
+++ b/people.html
@@ -50,7 +50,7 @@
          <img   src="./img/sheryl.jpg"  width="280" height="230" alt="альтернативный текст">       
       </div>
       <div>
-        <a class="people-name" href="" title=" see you soon" >Sheryl Sandberg</a>
+        <a class="people-name" href="./sandberg.html"  >Sheryl Sandberg</a>
          
          <p class="people-status">Technology executive </p>
 
