Add some style to page sandberg, add jQuery counter, add covid dashboard with Ajax

--- a/sandberg.html
+++ b/sandberg.html
@@ -15,8 +15,8 @@
     
 
     <section class="sheryl-header">           
-       <p class="sheryl-name-title">Sheryl </p>  
-       <p class="sheryl-name-title">Sandberg</p> 
+       <p id="sheryl" class="sheryl-name-title">Sheryl </p>  
+       <p  id="sandberg"  class="sheryl-name-title">Sandberg</p> 
     </section>
 
     <section class="first-sheryl-section"  >
@@ -85,7 +85,7 @@
 
 
 
-  
+   <script src="script.js"></script>
      <script src="scroll-to-top-script.js"></script>
 
   </body>
