Add alt text, add lang, edit link to fonts

--- a/gres.html
+++ b/gres.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Inspiration</title>
     <link rel="stylesheet" href="./css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
   </head>
   <body class="body-paper">
@@ -42,7 +43,7 @@
 
         
         <div class="margin-top-rigth">
-         <h2 class="about-hres"> <b>What are your secrets to maintaining speed?</b></h1> 
+         <h2 class="about-hres"> <b>What are your secrets to maintaining speed?</b></h2> 
 
           <p class="about-hres">You are the five people that surround you. I try to surround myself with people who are running so fast that I am out to catch them. Thanks to this I am showing good results, because I am equal to the strong ones. This is what drives me forward. If you are the only beacon, messiah and prophet, every word of which is law and light in darkness, is the path to nowhere.</p>
 
