--- a/people.html
+++ b/people.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+  <head >
     <meta charset="utf-8">
     <title>Inspiration</title>
     <link rel="stylesheet" href="./css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
   </head>
   <body class="body-paper">
@@ -20,7 +21,7 @@
     <section class="container">
       <article class="article-preview">
         <a href="./jobs.html">     
-           <img src="./img/jobs.jpg" width="280" height="230">
+           <img src="./img/jobs.jpg" alt="jobs-img" width="280" height="230">
         </div>
         <div>
           <p class="people-name" >Steve Jobs</p>          
@@ -31,7 +32,7 @@
 
      <article class="article-preview" >
        <a href="./gres.html"> 
-         <img   src="./img/hres.png"  width="280" height="230" alt="альтернативный текст">       
+         <img   src="./img/hres.png"  width="280" height="230" alt="gres-img">       
       </div>
       <div>
           <p class="people-name"> Yaroslava Gres</p>
@@ -44,7 +45,7 @@
        
        <article class="article-preview" >
       <a  href="./sandberg.html">
-         <img   src="./img/sheryl.jpg"  width="280" height="230" alt="альтернативный текст">       
+         <img   src="./img/sheryl.jpg"  width="280" height="230" alt="sheryl-img">       
       </div>
       <div>
         <p class="people-name">Sheryl Sandberg</p>
