--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Inspiration</title>
     <link rel="stylesheet" href="./css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
   </head>
   <body class="body-paper">
