--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en" >
   <head>
     <meta charset="utf-8">
     <title>Inspiration</title>
     <link rel="stylesheet" href="./css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
  <link href="./css/fa.min.css" rel="stylesheet">
 
   </head>
@@ -17,7 +18,6 @@
          <nav class="header-nav">
            <a class="header-link" href="./people.html">PEOPLE</a>
            <a class="header-link" href="./events.html">EVENTS</a>
-           <!--<a class="header-link" href="#">PARTNERS</a>-->
            <a class="header-link" href="/aboutUs.html">ABOUT US</a>
          </nav>     
     </header>  
@@ -65,7 +65,7 @@
         <p class="leaders"> <i>the</i><b>LEADERS</b></p>
         <p class="leadership-journal"><b>INSPIRATION - ONLINE LEADERSHIP JOURNAL</b></p>
         <P class="year" >INSPIRATION 2020</P>
-        <img  class="line-img " src="./img/background-home-img.png">       
+        <img  class="line-img " src="./img/background-home-img.png" alt="img-lines">       
       </div>
 
 
