--- a/jobs.html
+++ b/jobs.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
   <head>
     <meta charset="utf-8">
     <title>Inspiration</title>
     
     <link rel="stylesheet" href="./css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Kalam|Montserrat:400,700&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
   </head>
   <body class="background-dark">
@@ -25,7 +26,7 @@
     </section>
 
 
-   <section class="main-section-about-steve"  >
+   <section class="main-section-about-steve">
    
     <h2 class="all-title"> <b>Who Was Steve Jobs?</b></h2>
 
@@ -34,10 +35,7 @@
     <p class="about-steve">Born in 1955 to two University of Wisconsin graduate students who gave him up for adoption, Jobs was smart but directionless, dropping out of college and experimenting with different pursuits before co-founding Apple with Steve Wozniak in 1976. Jobs left the company in 1985, launching Pixar Animation Studios, then returned to Apple more than a decade later. Jobs died in 2011 following a long battle with pancreatic cancer.</p>
    </section>
 
-   <section class="think-different" >
-    <
-
-  </section>
+   <section class="think-different"></section>
 
   <section class="second-section-about-jobs">
     <h2 class="all-title"> What did Steve Jobs do at Apple?</h2>
@@ -45,67 +43,57 @@
     <p class="about-steve">Steve Jobs was not your typical Silicon Valley CEO. Unlike most tech companies founders, he had neither any engineering experience nor any business training. After all, he dropped out of college after one semester! Few people know that Steve Jobs was never CEO of Apple in his first run there: the company was run by older executives and investors, and Steve Jobs actually helped them hire an experienced, 'well-rounded' CEO in 1983, John Sculley. However, Jobs was kicked out of Apple by Sculley two years later and he watched him bring the company to naught during his tenure.</p>
 
     <p class="about-steve">The lesson he learned from this painful experience was to trust his own beliefs and values, and completely disregard the conventional views on how to run a company, including the traditional duties of a CEO. He delegated those duties to members of his executive team, most notably his second-in-command and eventual successor, Tim Cook, and focused on what he was best at: creating products, recruiting, marketing, and of course, being the public face of the company. He described it in a 2004 interview: "I get to spend my time on the forward-looking stuff. My top executives take half the other work off my plate. They love it, and I love it."</p>
-
   </section>
 
   <section class="section-think-different">
-    <div class="table-position">
-
-    <table border="1" class="table-styles">
-   <caption class="all-title"> Movies about Steve Jobs:</caption>
-   <tr>
-    <th>Films</th>
-    <th>Original release</th>
-    <th> Genre </th>
-    <th>Directed by </th>
-   </tr>
-   <tr>
-    <td>Pirates of Silicon Valley</td>
-    <td>June 20, 1999</td>
-    <td>Drama</td>
-    <td>Martyn Burke</td>
-   </tr>
-
-   <tr>
-    <td>JOBS</td>
-    <td>January 25, 2013 </td>
-    <td>Biographical drama</td>
-    <td>Joshua Michael Stern</td>
-   </tr>
-
-   <tr>
-    <td>Steve Jobs: The Lost Interview</td>
-    <td>May 11, 2012</td>
-    <td>Documental</td>
-    <td> Paul Sen</td>
-   </tr>
+  <div class="table-position">
+    <table  class="table-styles">
+      <caption class="all-title"> Movies about Steve Jobs:</caption>
+        <tr>
+          <th>Films</th>
+          <th>Original release</th>
+          <th> Genre </th>
+          <th>Directed by </th>
+        </tr>
+        <tr>
+          <td>Pirates of Silicon Valley</td>
+          <td>June 20, 1999</td>
+          <td>Drama</td>
+          <td>Martyn Burke</td>
+        </tr>
+         <tr>
+          <td>JOBS</td>
+          <td>January 25, 2013 </td>
+          <td>Biographical drama</td>
+          <td>Joshua Michael Stern</td>
+        </tr>
+         <tr>
+          <td>Steve Jobs: The Lost Interview</td>
+          <td>May 11, 2012</td>
+          <td>Documental</td>
+          <td> Paul Sen</td>
+        </tr>
    </table>
 
  
-<table border="1" class="table-styles">
-  <caption class="all-title"> Books about Steve Jobs:</caption>
-   <tr>
-    <th>Books</th>
-    <th> Author </th>
-    <th> Publication date </th>
-    <th> Genre </th>
-   </tr>
-
-    <tr>
-    <td>Steve Jobs (iSteve: The Book of Jobs)</td>
-    <td>Walter Isaacson</td>
-    <td>October 24, 2011 </td>
-    <td>Biography</td>
-   </tr>
-
-</div>
-   
- 
-  </table>
-
-
+  <table class="table-styles">
+     <caption class="all-title"> Books about Steve Jobs:</caption>
+      <tr>
+        <th>Books</th>
+        <th> Author </th>
+        <th> Publication date </th>
+        <th> Genre </th>
+      </tr>
+      <tr>
+        <td>Steve Jobs (iSteve: The Book of Jobs)</td>
+        <td>Walter Isaacson</td>
+        <td>October 24, 2011 </td>
+        <td>Biography</td>
+      </tr>
+    </table>
+  </div>
   </section>
   <script src="scroll-to-top-script.js"></script>
-    <script src="script.js"></script>
+  <script src="script.js"></script>
   </body>
 </html>
