Add alt text to gres, add span

--- a/sandberg.html
+++ b/sandberg.html
@@ -14,16 +14,17 @@
      </header>  
     <button onclick="topFunction()" class="top-button"> Top </button>
     
-    <section class="sheryl-header">           
-       <p id="sheryl" class="sheryl-name-title">Sheryl </p>  
-       <p  id="sandberg"  class="sheryl-name-title">Sandberg</p> 
+    <section class="sheryl-header">   
+    <h2 class="sheryl-name-title">
+      <span id="sheryl">Sheryl </span>
+      <span id="sandberg">Sandberg </span>
+    </h2>        
     </section>
 
-    <section class="first-sheryl-section">
-      
+    <section class="first-sheryl-section">      
       <div class="sheryl-div-colour">
         <p class="about-sheryl">Sheryl Sandberg is the chief operating officer of Facebook and best-selling author of 'Lean In: Women, Work, and the Will to Lead.'</p>
-        <h2 class="sheryl-title">Who Is Sheryl Sandberg?</h2>
+        <p class="sheryl-title">Who Is Sheryl Sandberg?</p>
         <p class="about-sheryl">Born in 1969 in Washington, D.C., Sheryl Sandberg attended Harvard as an undergrad and for business school, her early career taking her to the World Bank and then the U.S. Department of the Treasury. Following a successful stint as VP of online sales and operations at Google, Sandberg has served as COO of Facebook since 2008. In 2013, she published the best-selling Lean In: Women, Work, and the Will to Lead. </p>
       </div>
     </section>
@@ -52,7 +53,6 @@
         <div class="about-book">
          <p class="about-hres">Sheryl Sandberg’s Lean In is a massive cultural phenomenon and its title has become an instant catchphrase for empowering women. Ask most women whether they have the right to equality at work and the answer will be a resounding yes, but ask the same women whether they'd feel confident asking for a raise, a promotion, or equal pay, and some reticence creeps in. The statistics, although an improvement on previous decades, are certainly not in women's favour – of 197 heads of state, only twenty-two are women. Women hold just 20 percent of seats in parliaments globally, and in the world of big business, a meagre eighteen of the Fortune 500 CEOs are women. In Lean In, Sheryl Sandberg – Facebook COO and one of Fortune magazine's Most Powerful Women in Business – draws on her own experience of working in some of the world's most successful businesses and looks at what women can do to help themselves, and make the small changes in their life that can effect change on a more universal scale.</p>
         </div>  
-
         <div class="book-img">     
          <img src="./img/sheryl-main.jpg" alt="sheryl-book-img">
         </div>
