Fix link to aboutUs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          <nav class="header-nav">
            <a class="header-link" href="./people.html">PEOPLE</a>
            <a class="header-link" href="./events.html">EVENTS</a>
-           <a class="header-link" href="/aboutUs.html">ABOUT US</a>
+           <a class="header-link" href="./aboutUs.html">ABOUT US</a>
          </nav>     
     </header>  
 
