--- a/events.html
+++ b/events.html
@@ -46,7 +46,7 @@
           <h2 class="day">06</h2>
           <h3 class="event-month-city">/May</h3>
           <img src="./img/hres-event.jpg" class="event-img" alt="gres-img">
-          <h3 class="kind-of-event">Yaroslava Hres – Find a balance</h3>
+          <h3 class="kind-of-event">Yaroslava Hres – Find a balance in your life</h3>
           <h3 class="event-month-city">Lviv</h3>
           <button class="more"> More </button>
                     
